--- a/new-loader.html
+++ b/new-loader.html
@@ -106,6 +106,6 @@
 
 <script>
     function openNewPage() {
-        window.location.href = "home.html";
+        window.location.href = "index.html";
     }
 </script>
